--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode production",
+    "build:live": "webpack --watch --mode development",
+    "start:live": "nodemon --inspect dist/demo.bundle.js",
+    "start": "node dist/demo.bundle.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +21,7 @@
   },
   "homepage": "https://github.com/akronbook/koa-keycloak-demo#readme",
   "dependencies": {
+    "keycloak-connect": "^12.0.4",
     "koa": "^2.13.1",
     "koa-body": "^4.2.0",
     "koa-bodyparser": "^4.3.0",
